--- a/login.html
+++ b/login.html
@@ -5,15 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ThrowIt | Log In</title>
-        <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="./css/login.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     </head>
 
     <body>
         <div class="card w-50">
             <h4 class="card-header">LOG IN</h4>
             <div class="card-body">
-                <form>
+                <form action="" id="form" method="post">
                     <!--Employee ID field-->
                     <div class="form-group">
                       <label for="id">Employee ID</label>
