--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
         </div>
     </body>
-
-    <script src="./js/events.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/events.js" defer></script>
 
 </html>
