--- a/queries.html
+++ b/queries.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+</html><!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -6,16 +6,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <title>ThrowIt Home Page</title>
+        <title>ThrowIt | Questions</title>
     </head>
 
     <body>
-        <h3>Welcome to ThrowIt</h3>
-        <div class="events">
+        <h3>Welcome to Ask Your Questions session</h3>
+        <div class="queries">
             
         </div>
     </body>
     
-    <script src="./js/events.js"></script>
+    <script src="./js/queries.js"></script>
 
 </html>
