--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                 <form action="" id="form" method="post">
                     <!--Employee ID field-->
                     <div class="form-group">
-                      <label for="id">Employee ID</label>
+                      <label for="id">Username</label>
                       <input type="text" class="form-control" id="id" aria-describedby="employeeID" placeholder="Enter Employee ID">
                     </div>
         
