--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search">
                 <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
               </form>
-              <button type="button" class="btn btn-danger ml-3">Log Out</button>
+              <button type="button" id="logout" class="btn btn-danger ml-3">Log Out</button>
             </div>
         </nav>
 
